@@ -76,6 +76,42 @@ func_tmpdir ()
   }
 }
 
+if test "@with_dynamic_modules@" != no; then
+# prepare the loading infrastructure for the current dynamic module.
+# this can be invoked only after "./link.sh" and relies on its variables.
+# also uses:
+#   ${absolute_currentdir} : the top level directory
+#   ${DYNMOD} : the name of the directory where to put the generated files
+prepare_dynamic_module() {
+  dynmod=${DYNMOD-dynmod};
+  dyndir=${absolute_currentdir}/${dynmod};
+  mkdir -p ${dyndir};
+  dll="lib"; for m in ${NEW_MODULES}; do dll=${dll}-$m; done; dll=${dll}@DLL@;
+  lib=${dyndir}/${dll}; libs=${NEW_LIBS}; verbose @createsharedlib@;
+  # for each module there will be a hard link to a REQUIRE file
+  firstmod=''; othermods='';
+  for m in ${NEW_MODULES}; do
+    if test -z "${firstmod}"; then firstmod=$m;
+    else othermods=${othermods}' '$m; fi
+  done
+  # create the REQUIRE file
+  reqfile=${dyndir}/${firstmod}.lisp
+  for f in ${TO_PRELOAD}; do
+    echo "(cl:load (cl:merge-pathnames \"${moduledir}/${f}\" ext:*lib-directory*))" >> ${reqfile};
+  done
+  DM="(sys::dynload-modules (cl:merge-pathnames \"${dynmod}/${dll}\" ext:*lib-directory*) (quote ("
+  for m in ${NEW_MODULES}; do DM=${DM}" \"$m\""; done
+  echo ${DM}" )))" >> ${reqfile}
+  for f in ${TO_LOAD}; do
+    echo "(cl:load (cl:merge-pathnames \"${moduledir}/${f}\" ext:*lib-directory*))" >> ${reqfile};
+  done
+  # create links to the REQUIRE file
+  for m in ${othermods}; do ln ${dyndir}/$m.lisp ${reqfile}; done
+}
+else
+prepare_dynamic_module() {}
+fi
+
 # Remove the comment to Set debugging output on
 #set -x
 
@@ -277,6 +313,7 @@ case "$1" in
     TO_LOAD=''
     cd "$moduledir"
     . ./link.sh
+    prepare_dynamic_module;
     cd "$absolute_currentdir"
     # Generate new modules.h
     (cat "$sourcedir"/modules.h
@@ -397,6 +434,7 @@ case "$1" in
         TO_LOAD=''
         cd "$moduledir"
         . ./link.sh
+        prepare_dynamic_module;
         cd "$absolute_currentdir"
         # This is a crazy way to build doubly nested lists.
         allmodulevars="$allmodulevars""@@SEP1@@""moduledir=\""`echo "$moduledir" | sed -e 's,",\\\\",g' -e 's, ,@@SEP3@@,g'`"\""
